--- a/cctv/index.html
+++ b/cctv/index.html
@@ -11,10 +11,10 @@
     <script src="https://kit.fontawesome.com/111c11b663.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <title>CCTV Operator</title>
+    <title>xCCTV Operator</title>
 </head>
 <body>
-    <h2 class="text-center mt-3">Haxinja's random cctvs? <i class="fa-solid fa-video"></i></h2>
+    <h2 class="text-center mt-3">!Haxinja's random cctvs? <i class="fa-solid fa-video"></i></h2>
     <div class="control-wrap mt-3 container d-flex justify-content-center">
         <div class="container p-3">
             <button class="btn btn-outline-secondary" onclick="reload_cctvs();">Reload CCTV's</button>
